deploy-sts-test-app/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myappdemo
  name: myappdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myappdemo
  template:
    metadata:
      labels:
        app: myappdemo
    spec:
      containers:
      - image: ahmedgamal00/simple-app:app-4
        name: myappdemo
      imagePullSecrets:
      - name: dockerhub-cred
