deploy-sts-test-app/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: myapp-port
  selector:
    app: myappdemo
