deploy-sts-test-app/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "myapp.hak8s.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              name: 5000
